--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 							<div class="questionOption">
 								<label for="goToSite">Kan de gebruiker de site "Nu.nl" berijken?</label>
-                <div id="goToSite" class="buttonPair">
+                <div id="goToSite" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionGoToSite'>Open</a>">
                 	<span class="btn ja">Ja</span>
                   <span class="btn nee">Nee</span>
                 </div>
@@ -80,7 +80,7 @@
 
 							<div class="questionOption">
 								<label for="reload">Kan de klant deze pagina verversen?</label>
-              	<div id="reload" class="buttonPair">
+              	<div id="reload" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionReload'>Open</a>">
                   <span class="btn ja">Ja</span>
                 	<span class="btn nee">Nee</span>
             		</div>
@@ -161,7 +161,7 @@
 							</div>
 						</div>
 
-						<a class="btn finishButton" data-finishIndex="3">Nee</a>
+						<a class="btn finishButton" data-finishIndex="3">Open overzicht</a>
 					</article>
 					<!--end fourth phase-->
 				</div>
