--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<h1>Internet en Bellen</h1>
 						<div class="questionOption">
 							<label for="kiestoon">Hoort de klant een kiestoon?</label>
-							<div id="kiestoon" class="buttonPair">
+							<div id="kiestoon" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionKiestoon'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
@@ -110,7 +110,7 @@
 
 						<div class="questionOption">
 							<label for="zelfbellen">Kan de klant zichzelf bellen op bijvoorbeeld zijn of haar mobiele telefoon?</label>
-							<div id="zelfbellen" class="buttonPair">
+							<div id="zelfbellen" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionZelfbellen.html'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
@@ -118,7 +118,7 @@
 
 						<div class="questionOption">
 							<label for="probleemApparaatbellen">Kan de klant de telefoon bellen waar de klant klachten over heeft?</label>
-							<div if="probleemApparaatbellen" class="buttonPair">
+							<div if="probleemApparaatbellen" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionApparaatbellen.html'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
@@ -139,7 +139,7 @@
 
 						<div class="questionOption">
 							<label for="splitterAansluiting">Is de splitter van de klant goed aangesloten?</label>
-							<div id="splitterAansluiting" class="buttonPair">
+							<div id="splitterAansluiting" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionSplitterAansluiting.html'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
@@ -147,7 +147,7 @@
 
 						<div class="questionOption">
 							<label for="settopboxAansluiting">Is de settopbox van de klant goed aangesloten?</label>
-							<div id="settopboxAansluiting" class="buttonPair">
+							<div id="settopboxAansluiting" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionSettopboxAansluiting.html'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
@@ -155,7 +155,7 @@
 
 						<div class="questionOption">
 							<label for="zendersZoeken">Kunnen er zenders gevonden worden?</label>
-							<div id="zendersZoeken" class="buttonPair">
+							<div id="zendersZoeken" class="buttonPair" data-solution="U heeft dit probleem <a href='solutionZendersZoeken.html' target='_blank'>Open</a>">
 								<span class="btn ja">Ja</span>
 								<span class="btn nee">Nee</span>
 							</div>
